SOFTWARE_FACTORY/infra-gitops/apps/fago/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fago
  namespace: prod
  labels:
    app: fago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fago
  template:
    metadata:
      labels:
        app: fago
    spec:
      containers:
        - name: app
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
