SOFTWARE_FACTORY/infra-gitops/apps/fago/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fago
  namespace: prod
  labels:
    app: fago
spec:
  selector:
    app: fago
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
