SOFTWARE_FACTORY/infra-gitops/apps/fago/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fago
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fago.futurefarms.mx
      secretName: fago-tls
  rules:
    - host: fago.futurefarms.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fago
                port:
                  number: 80
